styles/ownplot.css
/**
 * @ Licence: OwnPlot, the OwnTech data plotter. Copyright (C) 2022. Matthias Riffard & Guillaume Arthaud - OwnTech Foundation.
	Delivered under GNU Lesser General Public License Version 2.1 (https://opensource.org/licenses/LGPL-2.1)
 * @ Website: https://www.owntech.org/
 * @ Mail: owntech@laas.fr
 * @ Create Time: 2022-08-30 09:31:24
 * @ Modified by: Jean Alinei
 * @ Modified time: 2022-09-07 14:35:14
 * @ Description:
 */
 
 /* Color scheme */

:root {
	--main-bg-color: #212427;
	--second-bg-color: #32343A;
	--third-bg-color: #42464D;
	--clearer-third-bg-color: #5f626b;
	--text-color: #F2F0E7;
	/* --simple-border: 1px solid #000000; */
	--bs-body-color: var(--text-color);
	--port-bar-btn-width: 70px;
}

*::-webkit-scrollbar {
    width: 6px;
    height: 6px;
  }
*::-webkit-scrollbar-track {
    border-radius: 10px;
    background: rgba(0,0,0,0);
}
*::-webkit-scrollbar-thumb{
    border-radius: 8px;
    background: var(--text-color);
}
*::-webkit-scrollbar-thumb:hover{
  	background: var(--text-color);
}
*::-webkit-scrollbar-thumb:active{
  	background: var(--text-color);
}

main{
	overflow: hidden;
}

 /* Window parts */

#topBar {
	background-color: var(--main-bg-color);
	border: var(--simple-border);
	box-sizing: border-box;
	/* resize: vertical;
	overflow: auto; */
}

#sideBar {
	background-color: var(--second-bg-color);
	border: var(--simple-border); 
	overflow-y: scroll;
}

#portBar {
	--port-bar-width: calc(0.5rem * 4 + var(--port-bar-btn-width) * 3); /* m-1 class = 0.5rem by default in bootstrap */
	width: var(--port-bar-width) !important;
	min-width: var(--port-bar-width) !important;
}

#terminalBar {
	background-color: var(--second-bg-color);
	border: var(--simple-border);
	overflow-y: scroll;
}

#appZone {
	background-color: var(--second-bg-color);
	border: var(--simple-border);
	overflow-y: scroll;
}

.appZoneInherit  {
	height: 100%;
}

#chartApp {
	border: var(--simple-border);
	/* height: inherit; */
	/* height: 100%; */
}

#myChart {
	background-color: var(--second-bg-color);
	background-color: white;
}

.btn {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.menu-btn {
	--bs-btn-color: var(--text-color);
    --bs-btn-bg: var(--third-bg-color);
    --bs-btn-border-color: var(--third-bg-color);

    --bs-btn-hover-color: var(--text-color);
    --bs-btn-hover-bg: var(--clearer-third-bg-color);
    --bs-btn-hover-border-color: var(--clearer-third-bg-color);

    --bs-btn-focus-shadow-rgb: inset 0 3px 5px var(--second-bg-color);

    --bs-btn-active-color: var(--text-color);
    --bs-btn-active-bg: var(--third-bg-color);
    --bs-btn-active-border-color: var(--text-color);
    --bs-btn-active-shadow: none;
    --bs-btn-disabled-color: var(--text-color);
    --bs-btn-disabled-bg: var(--third-bg-color);

	width: 85px;
}

.portBarBtn{
	width: var(--port-bar-btn-width) !important;
}

.nonBreakable {
	white-space: nowrap;
}

input {
	color: var(--text-color);
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.card {
	--bs-card-bg: var(--third-bg-color);
	overflow: hidden;
	text-overflow: ellipsis;
}

.collapseHead {
	text-decoration: none;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.form-check-label{
	cursor: pointer;
}
.form-check-input{
	cursor: pointer;
}

.input-group-text{
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

select{
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: pointer;
}

.tab-pane {
	overflow: hidden;
}

.legendLineCollapseBtn {
	border: none;
}

/* Chart Config */

.labelInput {
	border: none;
	background: transparent;
	border-bottom: 1px solid var(--text-color);
	outline: none;
}

/* th {
	cursor: pointer;
} 
Served when we could sort the tables but this feature is not implemented anymore */

.form-switch .form-check-input[type=checkbox] {
	/* bigger switch than the one from bootstrap */
    border-radius: 2em;
    height: 1.5em;
    width: 3em;
	cursor: pointer;
}

.btn:focus {
	box-shadow: none; /*remove outline after click release*/
}

.bigIcon {
	font-size: xx-large;
}

@keyframes tilt-shaking {
	0% { transform: rotate(0deg); }
	25% { transform: rotate(5deg); }
	50% { transform: rotate(0eg); }
	75% { transform: rotate(-5deg); }
	100% { transform: rotate(0deg); }
}

.deleteAnnim {
	animation: tilt-shaking 0.15s infinite;
}

.navbarTitle {
	font-size : 0.8em;
	padding-top : 0.5em;
}

.split {
    display: flex;
    flex-direction: row;
}

.gutter {
    background-color: #5f626b;
    background-repeat: no-repeat;
    background-position: 50%;
}

.gutter.gutter-horizontal {
    /* background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg=='); */
    cursor: col-resize;
}

.gutter.gutter-vertical {
    /* background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII='); */
    cursor: row-resize;
}

